// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert snapshots test renders Alert of error type 1`] = `
<div
  className=""
>
  <div
    className="error alertWrapper"
  >
    <div
      className="columns is-gapless is-multiline"
    >
      <div
        className="column is-narrow alertIcon"
      >
        <FontIcon
          className="material-icons"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          error
        </FontIcon>
      </div>
      <div
        className="column alertText"
      >
        <span
          className="alertTitle"
        >
          This is a title
           - 
        </span>
        This is the message
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert snapshots test renders Alert of error type should render action button 1`] = `
<div
  className=""
>
  <div
    className="error alertWrapper"
  >
    <div
      className="columns is-gapless is-multiline"
    >
      <div
        className="column is-narrow alertIcon"
      >
        <FontIcon
          className="material-icons"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          error
        </FontIcon>
      </div>
      <div
        className="column alertText"
      >
        <span
          className="alertTitle"
        >
          This is a title
           - 
        </span>
        This is a message
      </div>
      <div
        className="column is-narrow"
      >
        <FlatButton
          className="alertAction"
          disabled={false}
          fullWidth={false}
          label="Do something"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={false}
          secondary={false}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert snapshots test renders Alert of error type should render dismiss icon button 1`] = `
<div
  className=""
>
  <div
    className="error alertWrapper"
  >
    <div
      className="columns is-gapless is-multiline"
    >
      <div
        className="column is-narrow alertIcon"
      >
        <FontIcon
          className="material-icons"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          error
        </FontIcon>
      </div>
      <div
        className="column alertText"
      >
        <span
          className="alertTitle"
        >
          This is a title
           - 
        </span>
        This is a message
      </div>
      <div
        className="column is-narrow is-hidden-mobile"
      >
        <IconButton
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onTouchTap={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <NavigationClose
            className="alertDismiss"
          />
        </IconButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert snapshots test renders Alert of error type should render dismiss icon button and action button 1`] = `
<div
  className=""
>
  <div
    className="error alertWrapper"
  >
    <div
      className="columns is-gapless is-multiline"
    >
      <div
        className="column is-narrow alertIcon"
      >
        <FontIcon
          className="material-icons"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          error
        </FontIcon>
      </div>
      <div
        className="column alertText"
      >
        <span
          className="alertTitle"
        >
          This is a title
           - 
        </span>
        This is a message
      </div>
      <div
        className="column is-narrow"
      >
        <FlatButton
          className="alertAction"
          disabled={false}
          fullWidth={false}
          label="Do something"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={false}
          secondary={false}
        />
      </div>
      <div
        className="column is-narrow is-hidden-mobile"
      >
        <IconButton
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onTouchTap={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <NavigationClose
            className="alertDismiss"
          />
        </IconButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert snapshots test renders Alert of error type should render outside layout 1`] = `
<div
  className="layout-card forAlerts"
>
  <div
    className="error alertWrapper"
  >
    <div
      className="columns is-gapless is-multiline"
    >
      <div
        className="column is-narrow alertIcon"
      >
        <FontIcon
          className="material-icons"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          error
        </FontIcon>
      </div>
      <div
        className="column alertText"
      >
        <span
          className="alertTitle"
        >
          This is a title
           - 
        </span>
        This is a message
      </div>
    </div>
  </div>
</div>
`;
